Fixed bug #77768 (FFI: Builtin Types Should Not Raise Error On Redeclaration)